# hgdb-vitis

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.rst  hgdb-vitis  notes.md  setup.py
.github/workflows/: linux.yml
cmake/: FindLLVM.cmake  FindLLVMV0.cmake  FindLLVMV10.cmake  FindLLVMV3.cmake
python/: CMakeLists.txt  binding.cc  debug.cc  ir.cc  ir.hh  verilog.cc  verilog.hh
scripts/: download_test_vectors.sh
tests/: test_dct.py  test_func.py
